@@ -1,3 +1,9 @@
+2014-06-20  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* emacs-lisp/smie.el (smie--hanging-eolp-function): New var.
+	(smie-indent--hanging-p): Use it.
+	* progmodes/sh-script.el (sh-set-shell): Set it (bug#17621).
+
 2014-06-20  Leo Liu  <sdl.web@gmail.com>
 
 	* simple.el (read-quoted-char): Don't let help chars pop up help
